k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squad2-api
  labels:
    app: squad2-api
spec:
  selector:
    matchLabels:
      app: squad2-api
  template:
    metadata:
      labels:
        app: squad2-api
    spec:
      containers:
      - name: squad2-api
        image: image-registry.openshift-image-registry.svc:5000/tekton-argocd-squad2-api/app:6f473b2
        ports:
        - containerPort: 8080
