k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: squad2-api
  name: squad2-api
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: squad2-api
