k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: squad2-api
  name: squad2-api
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: squad2-api
    weight: 100
